[build-system]
requires = ["setuptools >= 60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylatusGUIs"
version = "1.0.0"
requires-python = ">= 3.10"
dependencies = ["pytango"]
authors = [{name = "Kenneth P. Marshall", email = "kenneth.marshall@esrf.fr"}]
maintainers = [{name = "Kenneth P. Marshall", email = "kenneth.marshall@esrf.fr"}]
description = "GUIs for generating code for Pylatus"
classifiers = [
"Programming Language :: Python :: 3.13"]

[tool.setuptools]
packages = ["pylatusGUIs"]
include-package-data = true
package-data = {"pylatusGUIs.icons" = ["green.png","grey.png"]}

[project.scripts]
pelletGUI = "pylatusGUIs.pelletGUI:main"

[project.urls]
repository = "https://github.com/msujas/pylatusGUIs"
